# open-api-test

openapi-artist/: docker-compose.yaml  openapi.yaml  setup.cfg
openapi-artist/.openapi-generator/: FILES
openapi-artist/src/artist/: main.py  security_api.py
openapi-artist/src/artist/apis/: default_api.py
openapi-artist/src/artist/models/: artist.py
openapi-artist/tests/: conftest.py  test_default_api.py
openapi-playlist/: docker-compose.yaml  openapi.yaml  setup.cfg
openapi-playlist/.openapi-generator/: FILES
openapi-playlist/src/playlist/: main.py  security_api.py
openapi-playlist/src/playlist/apis/: default_api.py
openapi-playlist/src/playlist/models/: playlist.py
openapi-playlist/tests/: conftest.py  test_default_api.py
