[metadata]
name = playlist
version = 1.0
description = Get the nhaccuatui.com data from the database. After crawling data
long_description = file: README.md
keywords = OpenAPI Nhaccuatui Music Data
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
